tests/Rules/Structure/Fixtures/invalid/has_marquee.html.twig
{# 1 errors #}
<marquee>bad</marquee>
